# haskell-ocr-exercise

./: .ghc.environment.x86_64-linux-9.4.8  .gitignore  CHANGELOG.md  LICENSE  cabal.project.local  ocr-exercise.cabal
app/: Main.hs
fixtures/ocr/: ocr_for_analysis.txt
src/: EntriesFile.hs  ParsedDigit.hs  PolicyNumber.hs  SevenSegmentDigit.hs
src/Digits/: Corrections.hs  Parse.hs  Read.hs
src/PolicyNumbers/: Analyze.hs  Corrections.hs  Status.hs  Validate.hs
test/Digits/: ParseSpec.hs  ReadSpec.hs
